[package]
name = "glean-wasm"
version = "0.1.0"
authors = ["brizental <beatriz.rizental@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
once_cell = "1.4.1"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
